<resources>
    <string name="app_name">Education Exchange</string>
    <string name="add_book_activity">Add TextBook</string>
    <string name="add_lecture_note">Add Lecture Note</string>
    <string name="add_general_activity">Add General Book</string>
    <string name="general_book">General Books</string>
    <string name="text_book">Text Books</string>
    <string name="lecture_notes">Lecture Notes</string>
    <string name="auth_failed">Failed to Authenticate</string>
    <string name="auth_success">Authentication Success</string>
    <string name="dbname_users" translatable="false">users</string>
    <string name="dbname_report" translatable="false">report</string>
    <string name="dbname_material" translatable="false">material</string>
    <string name="dbname_photos" translatable="false">photos</string>
    <string name="dbname_announcement" translatable="false">announcement</string>
    <string name="dbname_Request" translatable="false">request</string>
    <string name="field_username" translatable="false">username</string>
    <string name="field_email" translatable="false">email</string>
    <string name="dbname_status" translatable="false">status</string>
    <string name="send_report" translatable="false">successfully send your report</string>
    <string name="new_book" translatable="false">new_book</string>
    <string name="profile_photo" translatable="false">profile_photo</string>
    <string name="step1">1.Search</string>
    <string name="step2">2.Request</string>
    <string name="step3">3.Swap</string>
    <string name="sign_out_">Are you sure you want to sign out?</string>
    <string name="name_of_book">Book name:</string>
    <string name="nameBook">Enter the name:</string>
    <string-array name="type">
        <item>TextBooks</item>
        <item>Lecture Notes</item>
    </string-array>
    <string name="number_of_course">Course Id:</string>
    <string-array name="state">
        <item>@string/new_b</item>
        <item>@string/used</item>
    </string-array>
    <string name="ava">Availability:</string>
    <string name="enter_price">Enter the price</string>
    <string name="price">Price:</string>
    <string name="faculty">Faculty:</string>
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="string_open_camera">Open Camera</string>
    <string name="choose_photo">Take Photo</string>
    <string name="string_next">Next</string>
    <string name="empty_view_subtitle_text">Get started by adding a TextBook</string>
    <string name="empty_anno_subtitle_text">There is no any announcement yet</string>
    <string name="my_books">My Books</string>
    <string name="view_my_announcement">My announcement</string>
    <string name="edit">Edit Profile</string>
    <string name="name">Name</string>
    <string name="email">Email:</string>
    <string name="un_known_email">unKnown email</string>
    <string name="un_known_name">unKnown name</string>
    <string name="change_photo">Change photo</string>
    <string name="profile_fragment">Profile</string>
    <string name="change_password">Change password</string>
    <string name="change">Change</string>
    <string name="password">password</string>
    <string name="cancel">CANCEL</string>
    <string name="selected_bitmap" translatable="false">selected_bitmap</string>
    <string name="action_setting">Setting</string>
    <string name="all">All</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_dialog">ConfirmPaswordDialog</string>
    <string name="action_search">Search</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="please_select_a_faculty">Please Select a Faculty:</string>
    <string name="register">REGISTER A NEW ACCOUNT</string>
    <string name="profile">My Profile</string>
    <string name="edit_profile">Edit My Profile</string>
    <string name="selected_image" translatable="false">selected_image</string>
    <string name="title">Book name:</string>
    <string name="enter_title">Enter the name</string>
    <string name="enter_the_text">Enter the text</string>
    <string name="text">Text:</string>
    <string name="send_the_announcement">Send The Announcement</string>
    <string name="announcement_request">Please fill the following detail to publish the announcement:</string>
    <string name="announcement_request_general">Please fill the following detail to publish the announcement for the general book:</string>
    <string name="comment">Comment:</string>
    <string name="request">Request This material</string>
    <string name="dollars">ٍRS</string>
    <string name="sign_out">Sign Out</string>
    <string name="goToRigister">No Account yet? Create one</string>
    <string name="forgot">Forgot password!</string>
    <string name="information_about_app">Education Exchange is an application design to help students at King Abdulaziz University in Rabigh to exchange their textbooks and lecture notes.</string>
    <string name="about_us">About Us:</string>
    <string name="announcement">Announcement:</string>
    <string name="announcements">Announcements</string>
    <string name="add_announcement">Add announcement</string>
    <string name="return_to_fragment" translatable="false">return_to_fragment</string>
    <string name="matrial">Material</string>
    <string name="book_details">Book Details</string>
    <string name="confirm">CONFIRM</string>
    <string name="block">Block this material</string>
    <string name="ignoreThisMaterial">Ignore this material</string>
    <string name="blocked">Blocked</string>
    <string-array name="availability">
        <item>@string/available</item>
        <item>@string/pied</item>
    </string-array>
    <string-array name="status">
        <item>@string/active</item>
        <item>@string/blocked</item>
    </string-array>
    <string name="message">Message</string>
    <string name="Status">Status:</string>
    <string name="report">report the material</string>
    <string name="why_report">Why are you reporting this material?</string>
    <string name="unEthical">Un Ethical Material</string>
    <string name="unRelated">Un Related Material</string>
    <string name="other">other:</string>
    <string name="send">Send</string>
    <string name="fill_other">fill the other reasone please or click cancel</string>
    <string name="no_result">There is no result</string>
    <string-array name="type_user">
        <item>@string/student</item>
        <item>@string/admin</item>
    </string-array>
    <string name="available">Available</string>
    <string name="pied">Pied</string>
    <string-array name="major">
        <item>@string/faculty_of_computing_and_information_technology</item>
        <item>@string/faculty_of_medicine_in_rabigh</item>
        <item>@string/college_of_business_cob</item>
        <item>@string/college_of_sciences</item>
        <item>@string/general_course</item>
        <item>@string/college_of_english</item>
    </string-array>
<string name="active">Active</string>
    <string name="student">Student</string>
    <string name="admin">Admin</string>
    <string-array name="major_course_college_of_sciences">
        <item>@string/BIO200</item>
        <item>@string/BIO202</item>
        <item>@string/BIO221</item>
        <item>@string/BIO222</item>
        <item>@string/BIO231</item>
        <item>@string/BIO241</item>
        <item>@string/BIO251</item>
        <item>@string/BIO271</item>
        <item>@string/BIO281</item>
        <item>@string/BIO325</item>
        <item>@string/BIO330</item>
        <item>@string/BIO331</item>
        <item>@string/BIO332</item>
        <item>@string/BIO333</item>
        <item>@string/BIO334</item>
        <item>@string/BIO335</item>
        <item>@string/BIO336</item>
        <item>@string/BIO392</item>
        <item>@string/BIO391</item>
        <item>@string/BIO430</item>
        <item>@string/BIO431</item>
        <item>@string/BIO432</item>
        <item>@string/BIO433</item>
        <item>@string/BIO434</item>
        <item>@string/BIO435</item>
        <item>@string/BIO436</item>
        <item>@string/BIO437</item>
        <item>@string/BIO438</item>
        <item>@string/BIO451</item>
        <item>@string/BIO471</item>
        <item>@string/BIOC371</item>
        <item>@string/CHEM211</item>
        <item>@string/CHEM221</item>
        <item>@string/CHEM230</item>
        <item>@string/CHEM231</item>
        <item>@string/CHEM232</item>
        <item>@string/CHEM242</item>
        <item>@string/CHEM281</item>
        <item>@string/CHEM313</item>
        <item>@string/CHEM312</item>
        <item>@string/CHEM322</item>
        <item>@string/CHEM323</item>
        <item>@string/CHEM333</item>
        <item>@string/CHEM334</item>
        <item>@string/CHEM343</item>
        <item>@string/CHEM344</item>
        <item>@string/CHEM345</item>
        <item>@string/CHEM360</item>
        <item>@string/CHEM414</item>
        <item>@string/CHEM415</item>
        <item>@string/CHEM425</item>
        <item>@string/CHEM426</item>
        <item>@string/CHEM427</item>
        <item>@string/CHEM435</item>
        <item>@string/CHEM436</item>
        <item>@string/CHEM437</item>
        <item>@string/CHEM438</item>
        <item>@string/CHEM441</item>
        <item>@string/CHEM442</item>
        <item>@string/CHEM443</item>
        <item>@string/CHEM444</item>
        <item>@string/CHEM445</item>
        <item>@string/CHEM446</item>
        <item>@string/STAT211</item>
        <item>@string/MATH202</item>
        <item>@string/MATH203</item>
        <item>@string/MATH204</item>
        <item>@string/MATH205</item>
        <item>@string/MATH241</item>
        <item>@string/MATH251</item>
        <item>@string/MATH261</item>
        <item>@string/MATH305</item>
        <item>@string/MATH311</item>
        <item>@string/MATH312</item>
        <item>@string/MATH331</item>
        <item>@string/MATH332</item>
        <item>@string/MATH333</item>
        <item>@string/MATH343</item>
        <item>@string/MATH406</item>
        <item>@string/MATH413</item>
        <item>@string/MATH414</item>
        <item>@string/MATH421</item>
        <item>@string/MATH423</item>
        <item>@string/MATH444</item>
        <item>@string/MATH445</item>
        <item>@string/MATH462</item>
        <item>@string/MATH463</item>
        <item>@string/MATH464</item>
        <item>@string/MATH471</item>
        <item>@string/MATH481</item>
        <item>@string/PHYS202</item>
        <item>@string/PHYS203</item>
        <item>@string/PHYS221</item>
        <item>@string/PHYS241</item>
        <item>@string/PHYS251</item>
        <item>@string/PHYS252</item>
        <item>@string/PHYS281</item>
        <item>@string/PHYS311</item>
        <item>@string/PHYS312</item>
        <item>@string/PHYS328</item>
        <item>@string/PHYS331</item>
        <item>@string/PHYS332</item>
        <item>@string/PHYS342</item>
        <item>@string/PHYS343</item>
        <item>@string/PHYS352</item>
        <item>@string/PHYS354</item>
        <item>@string/PHYS383</item>
        <item>@string/PHYS392</item>
        <item>@string/PHYS393</item>
        <item>@string/PHYS413</item>
        <item>@string/PHYS414</item>
        <item>@string/PHYS455</item>
        <item>@string/PHYS456</item>
        <item>@string/PHYS461</item>
        <item>@string/PHYS462</item>
        <item>@string/PHYS463</item>
        <item>@string/PHYS471</item>
        <item>@string/PHYS472</item>
        <item>@string/PHYS484</item>
        <item>@string/PHYS485</item>
        <item>@string/PHYS493</item>
    </string-array>
    <string name="delete_dialog">Are you sure you want to delete this?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reports">Reports</string>
    <string name="user">Users</string>
</resources>