<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity">

        <item
            android:id="@+id/profile"
            android:title="@string/profile"
            app:showAsAction="never" />

        <item
            android:id="@+id/search"
            android:icon="@drawable/search"
            android:title="@string/action_search"
            app:showAsAction="always" />

        <item
            android:id="@+id/message"
            android:title="@string/message"
            app:showAsAction="never" />

        <item android:id="@+id/user"
            android:title="@string/user"
            app:showAsAction="never"/>

        <item android:id="@+id/report"
            android:title="@string/reports"
            app:showAsAction="never"/>
        <item android:id="@+id/announcement"
            android:title="@string/announcements"
            app:showAsAction="never"/>


</menu>