<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/relative1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:text="@string/announcement_request_general"
        android:textColor="@color/black"
        android:textSize="20dp"/>

    <!--title-->
    <RelativeLayout
        android:id="@+id/relative2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative1"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">
        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/TextStyle"
                android:text="@string/title" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_title"
                    style="@style/EditorFieldStyle"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_title"
                    android:paddingTop="12dp" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/relative6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative2"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">
        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/TextStyle"
                android:text="@string/text" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_text"
                    style="@style/EditorFieldStyle"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_the_text"
                    android:paddingTop="14dp" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>






</RelativeLayout>
