<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <com.example.ebtesam.educationexchange.Utils.SqaureImageView
        android:id="@+id/gridImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grey_border_bottom"
        android:padding="10dp"
        android:scaleType="centerCrop"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:paddingTop="10dp"
        android:text="@string/state"/>
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gridImageView"
        android:text="@string/name_of_book"/>

    <TextView
        android:id="@+id/nameBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/gridImageView"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_toEndOf="@+id/name"
        android:layout_toRightOf="@+id/name"
        android:text="@string/name" />



</RelativeLayout>